--- a/package.json
+++ b/package.json
@@ -23,6 +23,20 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec --ui tdd"
   },
+  "testling": {
+    "harness": "mocha-tdd",
+    "files": "test/*.test.js",
+    "browsers": [
+      "ie/6..latest",
+      "chrome/22..latest",
+      "firefox/16..latest",
+      "safari/latest",
+      "opera/11.0..latest",
+      "iphone/6",
+      "ipad/6",
+      "android-browser/latest"
+    ]
+  },
   "license": "MIT",
   "devDependencies": {
     "chai": "~1.9.0",
