--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "crossing.js"
   ],
   "scripts": {
-    "test": "mocha --reporter spec --ui tdd"
+    "test": "mocha --reporter spec --ui bdd"
   },
   "testling": {
-    "harness": "mocha-tdd",
+    "harness": "mocha-bdd",
     "files": "test/*.test.js",
     "browsers": [
-      "ie/6..latest",
-      "chrome/22..latest",
-      "firefox/16..latest",
+      "ie/9..latest",
+      "chrome/28..latest",
+      "firefox/23..latest",
       "safari/latest",
-      "opera/11.0..latest",
+      "opera/12.0..latest",
       "iphone/6",
       "ipad/6",
       "android-browser/latest"
